# geometric_shapes_py

./: .ci.prepare_codecov  .editorconfig  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  geometric_shapes_py.repos  package.xml
.github/workflows/: build_and_test.yaml  format.yaml
geometric_shapes/: __init__.py  __init__.pyi  _geometric_shapes_py.pyi
include/geometric_shapes/: bodies.h  shape_to_marker.h  shapes.h
src/: bodies.cpp  shape_extents.cpp  shape_operations.cpp  shape_to_marker.cpp
src/geometric_shapes/: _geometric_shapes_py.cpp  _geometric_shapes_pybind11.cpp  aabb.cpp  aabb.hpp  container_typecasters.hpp  mesh_operations.cpp  mesh_operations.hpp  pystreambuf.hpp  ros_msg_typecasters.cpp  ros_msg_typecasters.hpp  shape_operations.cpp  shape_operations.hpp  shape_to_marker.cpp  shape_to_marker.hpp  shapes.cpp  shapes.hpp
test/: common.py  test_create_mesh.py  test_loaded_meshes.py  test_shapes.py
